--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -10,7 +10,7 @@ services:
       - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
     ports:
       - 8080:8080
-  jhipster-postgresql:
-    extends:
-      file: postgresql.yml
-      service: jhipster-postgresql
+  # jhipster-postgresql:
+  #   extends:
+  #     file: postgresql.yml
+  #     service: jhipster-postgresql
